<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_home"
        android:checkable="true"
        android:checked="true"
        android:icon="@drawable/selector_icon1"
        android:title="@string/wanandroid" />
    <item
        android:checkable="true"
        android:id="@+id/item_collection"
        android:icon="@drawable/selector_icon2"
        android:title="@string/collection" />
    <item
        android:checkable="true"
        android:id="@+id/item_setting"
        android:icon="@drawable/selector_icon3"
        android:title="@string/setting" />
    <item
        android:checkable="true"
        android:id="@+id/item_about"
        android:icon="@drawable/selector_icon4"
        android:title="@string/about" />

</menu>