<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.qn.rascal.wanandroid.activitys.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="登录"
        android:textSize="35sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_marginTop="@dimen/dp_50"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginRight="@dimen/dp_10"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_50"
            android:src="@drawable/a" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="@dimen/dp_230"
            android:layout_height="@dimen/dp_50"

            android:hint="@string/hint_name"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginRight="@dimen/dp_10"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_50"
            android:src="@drawable/b" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="@dimen/dp_230"
            android:layout_height="@dimen/dp_50"
            android:hint="@string/hint_pwd"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="@dimen/dp_230"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_60"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="21sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/or" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="@dimen/dp_230"
        android:layout_height="@dimen/dp_50"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="21sp" />
</LinearLayout>
